@@ -18,9 +18,42 @@
             <properties>
                 <env>dev</env>
             </properties>
+        </profile>
+        <profile>
+            <id>devTest</id>
+            <properties>
+                <env>devTest</env>
+            </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.18</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>
+                                        test
+                                    </goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <additionalClasspathElements>
+                                <additionalClasspathElement>src/test/resources/*</additionalClasspathElement>
+                            </additionalClasspathElements>
+                            <systemPropertyVariables>
+                                <env>${env}</env>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+
         </profile>
     </profiles>
 
@@ -76,22 +109,7 @@
                 </configuration>
             </plugin>
             <!-- surefire is used to run unit tests and skips over integration tests. -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18</version>
-                <configuration>
-                    <additionalClasspathElements>
-                        <additionalClasspathElement>src/test/resources/*</additionalClasspathElement>
-                    </additionalClasspathElements>
-                    <excludes>
-                        <exclude>**/*IT.java</exclude>
-                    </excludes>
-                    <systemPropertyVariables>
-                        <env>${env}</env>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
+
             <!-- failsafe is used to run integration phases -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -107,7 +125,6 @@
                 </executions>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <argLine>-Xverify:none</argLine>
                     <systemPropertyVariables>
                         <env>${env}</env>
                     </systemPropertyVariables>
